[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
async-trait = "0.1.87"
messages = "0.3.1"

# Uncomment below to target the web.
tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
wasm-bindgen = "0.2.100"
# Keep app releases on the published core API. Local development can opt into
# a checkout with the ignored `.cargo/config.toml` patch documented in
# `doc/LOCAL_CORE_DEVELOPMENT.md`.
# Never enable the `embedded` feature here: the app ships the databases as
# Flutter assets and opens them file-backed via `Bible::open`.
haqor-core = { version = "=0.7.3", default-features = false }
